# blend2d-py

./: .gitignore  AGENTS.md  CHANGES.md  CMakeLists.txt  Makefile  README.md  TODO.md  deps.json  pyproject.toml
.github/workflows/: build.yml  claude.yml  wheel.yml
doc/: buffer.md
example/: README.md  animated_gradients.py  basic_circle.py  combined_shapes.py  realtime_demo.py  stroke_demo.py  text_rendering.py
examples/: README.md  animated_gradients.py  animated_rectangles.py  basic_circle.py  codec_test.py  combined_shapes.py  gradient_demo.py  path_drawing.py  pattern_demo.py  realtime_demo.py  rectangles_transparency.py  stroke_demo.py  stroke_options_demo.py  text_rendering.py
src/: blend2d_ext.cpp  blend2d_ext.h
src/bindings/: bind.cpp
src/blend2d/: __init__.py
tests/: test_context.py  test_path.py
