[build-system]
requires = ["scikit-build-core>=0.11", "nanobind>=2.9"]
build-backend = "scikit_build_core.build"

[project]
name = "blend2d-py"
authors = [{ name = "Shiguredo Inc.", email = "contact+pypi@shiguredo.jp" }]
dynamic = ["version"]
description = "Python bindings for Blend2D (via nanobind)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.12"

[project.urls]
Source = "https://github.com/shiguredo/blend2d-py"
Discord = "https://discord.gg/shiguredo"


[dependency-groups]
dev = [{ include-group = "test" }, { include-group = "lint" }]
test = ["pytest", "pytest-timeout", "numpy"]
lint = ["ruff", "ty"]
example = ["opencv-python"]
pypi = ["auditwheel", "patchelf"]

[tool.scikit-build]
minimum-version = "0.11"
sdist.include = ["VERSION"]
build-dir = "_build"

[tool.scikit-build.cmake]
version = ">=4.1"
define = { "CMAKE_CXX_STANDARD" = "20" }

[tool.scikit-build.build]
verbose = false

[tool.scikit-build.wheel]
packages = ["src/blend2d"]
expand-macos-universal-tags = true

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "^(?P<value>.+)$"

[tool.uv]
package = false
managed = true
python-preference = "only-managed"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
